--- a/css/style.css
+++ b/css/style.css
@@ -26,16 +26,55 @@ h2 {
 
 .bottom-tree {
     margin-bottom: 1cm;
- }
+}
 
- .profile-pic{
+.profile-pic{
     width: 100px;
     height: 100px;
     border-radius: 50%;
     margin-bottom: 1cm;
- }
+}
 
- .card:hover{
+.card:hover{
     background-color: blueviolet;
- }
+    cursor: pointer;
+}
+
+.popup {
+    display: none;
+    position: fixed;
+    padding: 10px;
+    width: 280px;
+    left: 50%;
+    margin-left: -150px;
+    height: 300px;
+    top: 50%;
+    margin-top: -100px;
+    background: #FFF;
+    border: 3px solid #000000;
+    z-index: 20;
+}
+  
+#popup:after {
+    position: fixed;
+    content: "";
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: rgba(0,0,0,0.5);
+    z-index: -2;
+}
+  
+#popup:before {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: #FFF;
+    z-index: -1;
+}
+
 ;
