--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,27 @@
 body {
-    margin: 100px;
+    
     font-family: 'Poppins', sans-serif;
-    background-image: url(../img/background.jpg);
+    background-image: url(../img/bg-web.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position:center;
 }
-
-div {
-    text-align: center;
-}
-
-h2 {
+.font-color > p, h2{
     color: #ffffff;
 }
 
-.container {
+.custom-button {
+    background-color: transparent !important;
+    color: #ffffff;
+    border: 2px solid #ffffff;
+    border-radius: 25px;
     width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
 }
-
-.bottom-tree {
-    margin-bottom: 1cm;
+.custom-button:hover {
+    background-color: #ffffff !important;
+    color: #000000;
+    border: 2px solid #ffffff;
+    border-radius: 25px;
 }
 
 .profile-pic{
@@ -33,11 +29,6 @@ h2 {
     height: 100px;
     border-radius: 50%;
     margin-bottom: 1cm;
-}
-
-.card:hover{
-    background-color: blueviolet;
-    cursor: pointer;
 }
 
 .popup {
