--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
     
     font-family: 'Poppins', sans-serif;
-    background-image: url("https://media.discordapp.net/attachments/951201147631337512/1091026550176092251/bg-web.png?width=1932&height=1088");
+    background-image: url("https://cdn.discordapp.com/attachments/857049381337694246/1121890035260731422/bg-web.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position:center;
