--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
     
     font-family: 'Poppins', sans-serif;
-    background-image: url("https://cdn.discordapp.com/attachments/857049381337694246/1121890035260731422/bg-web.png");
+    background-image: url("https://cdn.discordapp.com/attachments/857049381337694246/1124432071658569808/bg-web.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position:center;
@@ -11,15 +11,15 @@ body {
 }
 
 .custom-button {
-    background-color: transparent !important;
-    color: #ffffff;
+    background-color: #ffffff !important;
+    color: #7b08a9;
     border: 2px solid #ffffff;
     border-radius: 25px;
     width: 100%;
 }
 .custom-button:hover {
     background-color: #ffffff !important;
-    color: #000000;
+    color: #7b08a9;
     border: 2px solid #ffffff;
     border-radius: 25px;
 }
